Reference and consultation desktop versions added, experience icon and button alignment fixed

--- a/source/sass/blocks/consultation.scss
+++ b/source/sass/blocks/consultation.scss
@@ -1,57 +1,91 @@
 .consultation {
+    padding-top: 120px;
     background-color: $orange;
 
     @media (min-width: $min-desktop-width) {
-        padding-top: 50px;
-        padding-bottom: 40px;
-        padding-left: 50px;
-        padding-right: 50px;
+
     }
 }
 
 .consultation__form {
     @media (min-width: $min-desktop-width) {
-        width: 502px;
+        display: flex;
+        flex-wrap: wrap;
+        width: 581px;
+        padding-bottom: 150px;
         background-image: url("../img/consultation-whiteline.png");
         background-repeat: no-repeat;
-        background-position: 0 0;
+        background-position: 100% 0;
     }
 }
 
-.info-consultation__text {
-    display: flex;
-}
-
 .consultation__title {
-    width: 197px;
-    margin-bottom: 55px;
+    width: 200px;
+    margin-top: 30px;
+    margin-bottom: 0;
+    margin-left: 40px;
+    margin-right: 60px;
+    padding-top: 30px;
     font-weight: 500;
     font-size: 24px;
+    line-height: 38px;
     text-transform: uppercase;
     color: white;
+    background-color: $orange;
 }
 
 .consultation__tip {
+    width: 180px;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-top: 60px;
     font-size: 16px;
     font-weight: 300;
     line-height: 28px;
     color: white;
-    width: 160px;
+}
+
+.consultation__item {
+    width: 400px;
+    margin-bottom: 20px;
+    margin-left: 100px;
+
+    &--phone-number {
+        margin-top: 64px;
+    }
 }
 
 .consultation__field {
     display: block;
-    padding-left: 22px;
+    width: 100%;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 20px;
+    padding-right: 20px;
     font-weight: 300;
     font-size: 16px;
-    line-height: 28px;
+    line-height: 20px;
     color: white;
     background-color: $orange;
-    border: 2px solid #ffffff;
-    margin-top: 20px;
+    border: 2px solid white;
+
+    &::placeholder {
+        color: white;
+    }
+
+    &:focus {
+        outline: none;
+        border-color: cyan;
+    }
+
+    &:focus::placeholder {
+        visibility: hidden;
+    }
 }
 
 .consultation__button {
+    margin-left: 100px;
+
     @media (min-width: $min-desktop-width) {
         width: 300px;
     }
