--- a/source/sass/blocks/problems.scss
+++ b/source/sass/blocks/problems.scss
@@ -24,6 +24,10 @@
         align-items: flex-start;
         justify-content: space-between;
     }
+
+    @media (min-width: $min-desktop-width) {
+        align-items: stretch;
+    }
 }
 
 .problems__lead {
@@ -57,6 +61,7 @@
         padding-top: 71px;
         padding-left: 92px;
         line-height: 40px;
+        border-style: none;
     }
 }
 
