--- a/source/sass/blocks/reference.scss
+++ b/source/sass/blocks/reference.scss
@@ -1,6 +1,11 @@
 .reference {
     position: relative;
     background-color: white;
+
+    @media (min-width: $min-desktop-width) {
+        padding-top: 110px;
+        padding-bottom: 250px;
+    }
 }
 
 .reference__title {
@@ -11,6 +16,10 @@
     line-height: 60px;
     text-transform: uppercase;
     color: $dark-gray;
+
+    @media (min-width: $min-desktop-width) {
+        margin-bottom: 60px;
+    }
 }
 
 .reference__title-string {
@@ -26,15 +35,24 @@
     font-size: 18px;
     line-height: 24px;
     color: $dark-gray;
+
+    @media (min-width: $min-desktop-width) {
+        width: 580px;
+    }
 }
 
 .reference__item {
     position: relative;
+    padding-left: 40px;
+
+    &:not(:last-child) {
+        margin-bottom: 10px;
+    }
 
     &::before {
         content: "";
         position: absolute;
-        left: -28px;
+        left: 10px;
         top: 8px;
         width: 17px;
         height: 9px;
@@ -46,5 +64,9 @@
 .reference__consultation {
     @media (min-width: $min-desktop-width) {
         position: absolute;
+        top: 0;
+        left: calc(50% + 10px);
+        z-index: 1;
+        width: 100%;
     }
 }
